refactor : 가게 조회 #30 - Store : isDeleted 초기값 설정 - StoreController : 코드 포멧팅 정리 - StoreCreateReqDto : store 생성 시 isDeleted값은 초기값 false로 설정관련 isDeleted 필드 제거 - StoreService : 폐업상태인 가게는 조회에서 제외 처리